// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storyshots EmptyState Default 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

<div
  className="c0"
>
  <div
    className="c1 title"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c2 description"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots EmptyState Long Title, inside a container 1`] = `
.c1 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

<div
  style={
    Object {
      "padding": "52px 0",
      "width": 560,
    }
  }
>
  <div
    className="c0"
  >
    <div
      className="c1 title"
      fontWeight="title"
      size={24}
      type="#2f313a"
    >
      Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
    </div>
    <div
      className="c2 description"
      size={18}
      type="#59636f"
    >
      Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
    </div>
  </div>
</div>
`;

exports[`Storyshots EmptyState With icon 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c1 {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
      color="currentColor"
      size="1em"
    >
      <svg
        aria-hidden={true}
        className="farmblocks-icon "
        height="1em"
        viewBox="4 4 32 32"
        width="1em"
      >
        <path
          d="M29.666 11.437a1 1 0 01.334.746V32a1 1 0 01-1 1H11a1 1 0 01-1-1V8a1 1 0 011-1h13.313a1 1 0 01.666.254l4.687 4.183zM28 13h-4V9.061L23.932 9H12v22h16V13zm-13 4.25a.75.75 0 110-1.5h10a.75.75 0 110 1.5H15zm0 3a.75.75 0 110-1.5h10a.75.75 0 110 1.5H15zm0 3a.75.75 0 110-1.5h10a.75.75 0 110 1.5H15z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </div>
  <div
    className="c3 title"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c4 description"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots EmptyState With image 1`] = `
.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

<div
  className="c0"
>
  <img
    alt=""
    className="c1 thumbnail"
    height={72}
    size={72}
    src="https://picsum.photos/200?image=0"
    width={72}
  />
  <div
    className="c2 title"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c3 description"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots EmptyState With loading action 1`] = `
.c2 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c2 .farmblocks-icon {
  display: block;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c6 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c6:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c6:focus {
  box-shadow: none;
}

.c6:hover .icon,
.c6:focus .icon {
  color: white;
}

.c6 > .icon.left-icon i::before {
  display: inline-block;
  -webkit-animation: spin 1.1s infinite linear;
  animation: spin 1.1s infinite linear;
}

.c6:hover {
  background-color: #2980b9;
}

.c6:focus {
  background-color: #2980b9;
}

.c6:disabled,
.c6:disabled .icon,
.c6:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c6:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c7 {
  -webkit-animation: 2s linear 0s infinite normal iVXCSc;
  animation: 2s linear 0s infinite normal iVXCSc;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.c5 > * {
  margin: 4px;
}

.c1 {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

@media screen and (min-width:321px) {
  .c5 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <div
    className="c1"
  >
    <span
      className="c2"
      color="currentColor"
      size="1em"
    >
      <svg
        aria-hidden={true}
        className="farmblocks-icon "
        height="1em"
        viewBox="4 4 32 32"
        width="1em"
      >
        <path
          d="M31 20c0-6.074-4.926-11-11-11-6.075 0-11 4.925-11 11s4.925 11 11 11 11-4.925 11-11zm2 0c0 7.18-5.82 13-13 13S7 27.18 7 20 12.82 7 20 7c7.179 0 13 5.821 13 13zm-13 4.019c1.119 0 1.948.828 1.948 1.903v.044c0 1.074-.83 1.903-1.948 1.903-1.119 0-1.948-.829-1.948-1.903v-.044c0-1.075.83-1.903 1.948-1.903zM18.008 13.14c-.067-.648.292-1.14.895-1.14h2.195c.602 0 .961.492.894 1.14l-.962 8.416c-.068.605-.47.986-1.03.986s-.962-.38-1.03-.986l-.962-8.416z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </div>
  <div
    className="c3 title"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c4 description"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="c5 buttons"
  >
    <button
      className="c6"
      data-testid="empty-state-button-Primary Action"
      disabled={true}
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-6px)",
          }
        }
      >
        <span
          className="c2"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon c7"
            data-testid="loading"
            height="1em"
            viewBox="4 4 32 32"
            width="1em"
          >
            <path
              d="M19 8a1 1 0 012 0v6a1 1 0 01-2 0V8zm2 24a1 1 0 01-2 0v-5a1 1 0 012 0v5zM8 21a1 1 0 010-2h6a1 1 0 010 2H8zm18-.5a.5.5 0 110-1h6a.5.5 0 110 1h-6zm3.197 7.283a1 1 0 01-1.414 1.414l-3.86-3.86a1 1 0 011.414-1.414l3.86 3.86zm-12.87-12.87a1 1 0 01-1.414 1.414l-4.11-4.11a1 1 0 011.414-1.414l4.11 4.11zm-1.664 9.01a1 1 0 011.414 1.414l-3.86 3.86a1 1 0 01-1.414-1.414l3.86-3.86zm13.12-13.12a1 1 0 011.414 1.414l-4.11 4.11a1 1 0 01-1.414-1.414l4.11-4.11z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      Primary Action
    </button>
  </div>
</div>
`;

exports[`Storyshots EmptyState With one action 1`] = `
.c6 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c6 .farmblocks-icon {
  display: block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c5 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c5:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c5:focus {
  box-shadow: none;
}

.c5:hover .icon,
.c5:focus .icon {
  color: white;
}

.c5:hover {
  background-color: #2980b9;
}

.c5:focus {
  background-color: #2980b9;
}

.c5:disabled,
.c5:disabled .icon,
.c5:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c5:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.c4 > * {
  margin: 4px;
}

@media screen and (min-width:321px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <img
    alt=""
    className="c1 thumbnail"
    height={72}
    size={72}
    src="https://picsum.photos/200?image=0"
    width={72}
  />
  <div
    className="c2 title"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c3 description"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="c4 buttons"
  >
    <button
      className="c5"
      data-testid="empty-state-button-Primary Action"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-6px)",
          }
        }
      >
        <span
          className="c6"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="4 4 32 32"
            width="1em"
          >
            <path
              d="M25.598 9C30.145 9 33 11.716 33 16.094c0 1.638-.652 3.22-1.724 4.708a12.92 12.92 0 01-1.66 1.881l-8.33 7.8c-.346.337-.81.517-1.286.517s-.94-.18-1.273-.505l-8.321-7.806c-.427-.363-1.113-1.086-1.735-1.962C7.631 19.262 7 17.704 7 16.094 7 11.716 9.855 9 14.402 9c1.981 0 3.874.98 5.598 2.461C21.724 9.98 23.617 9 25.598 9zM14.79 11.202a5.5 5.5 0 00-5.5 5.5.5.5 0 101 0 4.5 4.5 0 014.5-4.5.5.5 0 000-1z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      Primary Action
    </button>
  </div>
</div>
`;

exports[`Storyshots EmptyState With one action and info 1`] = `
.c6 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c6 .farmblocks-icon {
  display: block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c5 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c5:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c5:focus {
  box-shadow: none;
}

.c5:hover .icon,
.c5:focus .icon {
  color: white;
}

.c5:hover {
  background-color: #2980b9;
}

.c5:focus {
  background-color: #2980b9;
}

.c5:disabled,
.c5:disabled .icon,
.c5:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c5:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c7 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.c4 > * {
  margin: 4px;
}

@media screen and (min-width:321px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <img
    alt=""
    className="c1 thumbnail"
    height={72}
    size={72}
    src="https://picsum.photos/200?image=0"
    width={72}
  />
  <div
    className="c2 title"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c3 description"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="c4 buttons"
  >
    <button
      className="c5"
      data-testid="empty-state-button-Primary Action"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-6px)",
          }
        }
      >
        <span
          className="c6"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="4 4 32 32"
            width="1em"
          >
            <path
              d="M25.598 9C30.145 9 33 11.716 33 16.094c0 1.638-.652 3.22-1.724 4.708a12.92 12.92 0 01-1.66 1.881l-8.33 7.8c-.346.337-.81.517-1.286.517s-.94-.18-1.273-.505l-8.321-7.806c-.427-.363-1.113-1.086-1.735-1.962C7.631 19.262 7 17.704 7 16.094 7 11.716 9.855 9 14.402 9c1.981 0 3.874.98 5.598 2.461C21.724 9.98 23.617 9 25.598 9zM14.79 11.202a5.5 5.5 0 00-5.5 5.5.5.5 0 101 0 4.5 4.5 0 014.5-4.5.5.5 0 000-1z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      Primary Action
    </button>
  </div>
  <div
    className="c7 info"
    size={14}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;

exports[`Storyshots EmptyState With one action, inside a container 1`] = `
.c6 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c6 .farmblocks-icon {
  display: block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c5 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c5:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c5:focus {
  box-shadow: none;
}

.c5:hover .icon,
.c5:focus .icon {
  color: white;
}

.c5:hover {
  background-color: #2980b9;
}

.c5:focus {
  background-color: #2980b9;
}

.c5:disabled,
.c5:disabled .icon,
.c5:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c5:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.c4 > * {
  margin: 4px;
}

@media screen and (min-width:321px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  style={
    Object {
      "padding": "52px 0",
      "width": 560,
    }
  }
>
  <div
    className="c0"
  >
    <img
      alt=""
      className="c1 thumbnail"
      height={72}
      size={72}
      src="https://picsum.photos/200?image=0"
      width={72}
    />
    <div
      className="c2 title"
      fontWeight="title"
      size={24}
      type="#2f313a"
    >
      Empty State Title
    </div>
    <div
      className="c3 description"
      size={18}
      type="#59636f"
    >
      Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
    </div>
    <div
      className="c4 buttons"
    >
      <button
        className="c5"
        data-testid="empty-state-button-Primary Action"
        onClick={[Function]}
        size="MEDIUM"
        type="SECONDARY"
      >
        <div
          className="icon left-icon"
          style={
            Object {
              "transform": "translateX(-6px)",
            }
          }
        >
          <span
            className="c6"
            color="currentColor"
            size="1em"
          >
            <svg
              aria-hidden={true}
              className="farmblocks-icon "
              height="1em"
              viewBox="4 4 32 32"
              width="1em"
            >
              <path
                d="M25.598 9C30.145 9 33 11.716 33 16.094c0 1.638-.652 3.22-1.724 4.708a12.92 12.92 0 01-1.66 1.881l-8.33 7.8c-.346.337-.81.517-1.286.517s-.94-.18-1.273-.505l-8.321-7.806c-.427-.363-1.113-1.086-1.735-1.962C7.631 19.262 7 17.704 7 16.094 7 11.716 9.855 9 14.402 9c1.981 0 3.874.98 5.598 2.461C21.724 9.98 23.617 9 25.598 9zM14.79 11.202a5.5 5.5 0 00-5.5 5.5.5.5 0 101 0 4.5 4.5 0 014.5-4.5.5.5 0 000-1z"
                fill="currentColor"
                fillRule="nonzero"
              />
            </svg>
          </span>
        </div>
        Primary Action
      </button>
    </div>
  </div>
</div>
`;

exports[`Storyshots EmptyState With two actions 1`] = `
.c7 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c7 .farmblocks-icon {
  display: block;
}

.c5 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  background-color: #FFFFFF;
  color: #59636f;
  padding: 0 16px;
}

.c5 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c5:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c5:focus {
  box-shadow: none;
}

.c5:hover .icon,
.c5:focus .icon {
  color: white;
}

.c5 > .icon {
  color: rgba(0,0,0,0.32);
}

.c5:hover,
.c5:focus {
  color: #3498db;
  border-color: #3498db;
}

.c5:hover > .icon,
.c5:focus > .icon {
  color: #3498db;
}

.c5:disabled,
.c5:disabled .icon,
.c5:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c5:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c6 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  min-height: 48px;
  min-width: 48px;
  box-sizing: border-box;
  border: solid 1px rgba(0,0,0,0.16);
  border-radius: 4px;
  box-shadow: 0 2px 2px 0 rgba(0,0,0,0.16);
  color: white;
  line-height: 46px;
  font-size: 16px;
  font-family: lato,sans-serif;
  font-weight: 600;
  -webkit-font-smoothing: antialiased !important;
  white-space: nowrap;
  text-overflow: ellipsis;
  outline: 0;
  cursor: pointer;
  -webkit-transition: background 0.3s ease;
  transition: background 0.3s ease;
  background-color: #3498db;
  padding: 0 16px;
}

.c6 .icon {
  line-height: 1;
  color: rgba(255,255,255,0.56);
  -webkit-align-self: center;
  -ms-flex-item-align: center;
  align-self: center;
  font-size: 1.4em;
}

.c6:hover {
  box-shadow: 0 4px 4px 0 rgba(0,0,0,0.16);
}

.c6:focus {
  box-shadow: none;
}

.c6:hover .icon,
.c6:focus .icon {
  color: white;
}

.c6:hover {
  background-color: #2980b9;
}

.c6:focus {
  background-color: #2980b9;
}

.c6:disabled,
.c6:disabled .icon,
.c6:disabled:hover {
  color: rgba(0,0,0,0.32);
}

.c6:disabled {
  background-color: #ccc;
  box-shadow: none;
}

.c2 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c3 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c1 {
  box-sizing: border-box;
  border-radius: 4px;
  object-fit: cover;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c4 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  width: 100%;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  margin-top: 16px;
}

.c4 > * {
  margin: 4px;
}

@media screen and (min-width:321px) {
  .c4 {
    -webkit-flex-direction: row;
    -ms-flex-direction: row;
    flex-direction: row;
  }
}

<div
  className="c0"
>
  <img
    alt=""
    className="c1 thumbnail"
    height={72}
    size={72}
    src="https://picsum.photos/200?image=0"
    width={72}
  />
  <div
    className="c2 title"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c3 description"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="c4 buttons"
  >
    <button
      className="c5"
      data-testid="empty-state-button-Secondary Action"
      onClick={[Function]}
      size="MEDIUM"
      type="NEUTRAL"
    >
      Secondary Action
    </button>
    <button
      className="c6"
      data-testid="empty-state-button-Primary Action"
      onClick={[Function]}
      size="MEDIUM"
      type="SECONDARY"
    >
      <div
        className="icon left-icon"
        style={
          Object {
            "transform": "translateX(-6px)",
          }
        }
      >
        <span
          className="c7"
          color="currentColor"
          size="1em"
        >
          <svg
            aria-hidden={true}
            className="farmblocks-icon "
            height="1em"
            viewBox="4 4 32 32"
            width="1em"
          >
            <path
              d="M25.598 9C30.145 9 33 11.716 33 16.094c0 1.638-.652 3.22-1.724 4.708a12.92 12.92 0 01-1.66 1.881l-8.33 7.8c-.346.337-.81.517-1.286.517s-.94-.18-1.273-.505l-8.321-7.806c-.427-.363-1.113-1.086-1.735-1.962C7.631 19.262 7 17.704 7 16.094 7 11.716 9.855 9 14.402 9c1.981 0 3.874.98 5.598 2.461C21.724 9.98 23.617 9 25.598 9zM14.79 11.202a5.5 5.5 0 00-5.5 5.5.5.5 0 101 0 4.5 4.5 0 014.5-4.5.5.5 0 000-1z"
              fill="currentColor"
              fillRule="nonzero"
            />
          </svg>
        </span>
      </div>
      Primary Action
    </button>
  </div>
</div>
`;

exports[`Storyshots EmptyState extended style 1`] = `
.c3 {
  display: inline-block;
  vertical-align: text-bottom;
}

.c3 .farmblocks-icon {
  display: block;
}

.c4 {
  font-family: Lato,sans-serif;
  font-size: 24px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #2f313a;
  text-align: center;
  font-weight: 600;
}

.c5 {
  font-family: Lato,sans-serif;
  font-size: 18px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c6 {
  font-family: Lato,sans-serif;
  font-size: 14px;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  color: #59636f;
  text-align: center;
}

.c0 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c0 > .thumbnail {
  margin-bottom: 24px;
}

.c0 > .description,
.c0 > .info {
  margin-top: 16px;
}

.c2 {
  font-size: 72px;
  color: rgba(0,0,0,0.32);
}

.c1 {
  border: solid 3px lightsalmon;
}

.c1 .icon {
  font-size: 16px;
  color: olive;
}

.c1 .title {
  font-family: fantasy;
}

.c1 .description {
  font-family: serif;
}

.c1 .info {
  font-family: monospace;
}

<div
  className="c0 c1"
>
  <div
    className="c2"
  >
    <span
      className="c3"
      color="currentColor"
      size="1em"
    >
      <svg
        aria-hidden={true}
        className="farmblocks-icon "
        height="1em"
        viewBox="4 4 32 32"
        width="1em"
      >
        <path
          d="M29.666 11.437a1 1 0 01.334.746V32a1 1 0 01-1 1H11a1 1 0 01-1-1V8a1 1 0 011-1h13.313a1 1 0 01.666.254l4.687 4.183zM28 13h-4V9.061L23.932 9H12v22h16V13zm-13 4.25a.75.75 0 110-1.5h10a.75.75 0 110 1.5H15zm0 3a.75.75 0 110-1.5h10a.75.75 0 110 1.5H15zm0 3a.75.75 0 110-1.5h10a.75.75 0 110 1.5H15z"
          fill="currentColor"
          fillRule="nonzero"
        />
      </svg>
    </span>
  </div>
  <div
    className="c4 title"
    fontWeight="title"
    size={24}
    type="#2f313a"
  >
    Empty State Title
  </div>
  <div
    className="c5 description"
    size={18}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
  <div
    className="c6 info"
    size={14}
    type="#59636f"
  >
    Integer posuere erat a ante venenatis dapibus posuere velit aliquet. Etiam porta sem malesuada magna mollis euismod.
  </div>
</div>
`;
